MedicineStock Microservice/MedicineStock Microservice/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "medicinestock-c3fa"
    labels:
        app: "medicinestock-c3fa"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "medicinestock-c3fa"
